# Learning-ground

./: MCP - fastMcp  REST API
learnforge/: .gitignore  README.md
learnforge/mcp-debate/: pyproject.toml
learnforge/mcp-debate/mcp_debate/: __init__.py  server.py
learnforge/mcp-jury/: pyproject.toml
learnforge/mcp-jury/mcp_jury/: __init__.py  server.py
learnforge/mcp-pathway/: pyproject.toml
learnforge/mcp-pathway/mcp_pathway/: __init__.py  server.py
learnforge/mcp-professor/: pyproject.toml
learnforge/mcp-professor/mcp_professor/: __init__.py  server.py
learnforge/mcp-simulation/: pyproject.toml
learnforge/mcp-simulation/mcp_simulation/: __init__.py  server.py
learnforge/mcp-socratic/: pyproject.toml
learnforge/mcp-socratic/mcp_socratic/: __init__.py  server.py
learnforge/mcp-teacher/: pyproject.toml
learnforge/mcp-teacher/mcp_teacher/: __init__.py  server.py
