[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-pathway"
version = "0.1.0"
description = "LearnForge MCP — Parcours guidé A→Z (curriculum, sources, progression)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.0",
]

[project.scripts]
mcp-pathway = "mcp_pathway.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_pathway*"]
