[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-teacher"
version = "0.1.0"
description = "LearnForge MCP — Enseigner à des étudiants IA (Feynman)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.0",
]

[project.scripts]
mcp-teacher = "mcp_teacher.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_teacher*"]
